k8s/basic-api-gateway/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: apigw

spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 30002
    hostname: "*.example.com"
    allowedRoutes:
      namespaces:
        from: All
